--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,7 +24,12 @@
           {{ . | plainify }}
         {{- end -}}
       ">
-    {{ end }}
+    {{ end }}    
+    <meta property="og:image" content="{{ .Site.BaseURL }}{{ .Site.Params.featured_image }}">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="{{ .Permalink }}">
 
     {{ partial "site-style.html" . }}
     {{ partial "site-scripts.html" . }}
@@ -59,7 +64,7 @@
 
   <body class="ma0 {{ $.Param "body_classes"  | default "avenir bg-near-white"}}{{ with getenv "HUGO_ENV" }} {{ . }}{{ end }}">
 
-    {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
+    {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}    
     <main class="pb7" role="main">
       {{ block "main" . }}{{ end }}
     </main>
